# radarsync

./: Cargo.toml  LICENSE  README.md
doppler-ws/: Cargo.toml
doppler-ws/src/: device.rs  error.rs  lib.rs  model.rs
radarsync/: Cargo.toml
radarsync/.sqlx/: query-24c410ab3e3fc31872d3a0c9fc92fbb57db400c5f83ebe4339bbc26392ff09a9.json  query-2822f512863d0f05e7f4b6bd15f142b6ac9cf022f1e047714562aaeadd838b3a.json  query-459cd1bb323d165b138afe9a4aa7b5871f0e5ed260c7f03daf0e21da0dd054d5.json  query-873c3da7954c82c2de34169036ab5f71bd54d4fd5c8bdde6896348b102b76383.json
radarsync/db/migrations/: 2024082701_init.sql
radarsync/src/: db.rs  main.rs  progress.rs
