[package]
name = "radarsync"
version = "0.5.0"
edition = "2021"

[dependencies]
doppler-ws = { path = "../doppler-ws" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
qrencode = "0.14"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
# will likely be used if/when library deduplication is implemented
# audiotags = "0.5"
anyhow = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
dirs = "5"
serde_json = "1"
mime_guess = "2"
indicatif = "0.17.8"
